# invio

./: .gitignore  ARCHITECTURE.md  DESIGN_CHANGES.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  REPORTS_PAGE.md  RESPONSIVE_DESIGN_UPDATE.md  SETUP.md  TABLE_FEATURE.md  index.html  package-lock.json  package.json  setup-check.bat  tailwind.config.js
.qoder/quests/: ui-only.md
.qoder/rules/: invio.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 20250101000000_init.sql  20250101000001_seed_sample_data.sql  20250102000000_create_users.sql  20250102000001_seed_users.sql
src-tauri/src/: commands.rs  db.rs  main.rs  models.rs
src/components/: AddTransactionForm.tsx  BudgetAlert.tsx  CategoryDonut.tsx  Header.tsx  Layout.tsx  Sidebar.tsx  SpendingChart.tsx  TransactionList.tsx
src/pages/: CategoryDetails.tsx  Dashboard.tsx  Reports.tsx  Settings.tsx  Users.tsx
src/store/: useStore.ts
